--- a/js/js23/package.json
+++ b/js/js23/package.json
@@ -10,8 +10,5 @@
     "awesome"
   ],
   "author": "niks",
-  "license": "ISC",
-  "dependencies": {
-    "slugify": "^1.6.6"
-  }
+  "license": "ISC"
 }
