--- a/react/server-api-contacts/package.json
+++ b/react/server-api-contacts/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "json-server -p 3006 -w db.json"
+    "start": "json-server -p 3006 -w db.json",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -11,4 +11,4 @@
   "dependencies": {
     "json-server": "^1.0.0-beta.5"
   }
-}
+}}
